# kai_wip-website

./: .gitignore  .gitmodules  config.toml  hugo.toml
assets/css/: custom.css
content/: about.md  links.md
content/posts/2025-02-21_slowest-linefit/: index.md  pyproject.toml  src.py
layouts/: index.html
layouts/_default/: list.html  term.html
layouts/partials/: disqus.html  header.html
layouts/shortcodes/: show.html  showntell.html  showntellcode.html  tell.html
public/: index.html  index.xml  sitemap.xml
public/2023-10-18-surviving-lawlessness-pt-1/: index.html
public/about/: index.html
public/categories/: index.html  index.xml
public/css/: main.18c8ba81eb5cec9975c88780506be900095b3b0dd7a307bd35d96df4bdc73517.css  main.20f41c68195c405cc71f6db480fa70033e65c9902f8d78bf2b0459ae44ea0606.css  main.326c96854b5e104c7fad5bf9f8721dc8010a8a8167168f0c95a9480a8efb87b4.css  main.332bc9cb07d3ea39c1fecfbee1e0c0a95027d0547c5161700c15f0fd1806849a.css  main.48e0b5ad107d84a79bf7333b217a0aed738e996c22b069b9b40679e6d4c588a9.css  main.6057f469fa9b632a4ffd0954d6c1dfa3018bbd6de6cc407a9dc7dbe10d1d50ab.css  main.65e995dfa65accd63c8d599b58922d3a18e8801abbe1e635146e3000d902e80f.css  main.711b7d34296e17e3a8a5d91b74a11f582159f5d7a6aac5fe3128c40fa42783fe.css  main.78593c3dfa6d9a887988ea755b44f18ff3044cb5421949d970825f883c7d65e2.css  main.85e5bf2fbbbd4d515021c39d3647a9cb4bb0e8cb6b5cac9101320b5cb377ff58.css  main.8dd420c8a7c2043485184e225c574622c1ed125e19dd04293fd87a82da0da8d7.css  main.a0ad30501dc17fb96f2fecf14088bc6cb1ef3d3e796fc7e9ecd3af62c0390cd6.css  (+3 more)
static/: _redirects
(+57 files in other folders)
